<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="15dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/manufacture_text_view"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_manufacture"
        android:gravity="center"
        android:typeface="serif"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/default_party_size"/>

    <TextView
        android:id="@+id/model_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:typeface="serif"
        android:textSize="16sp"
        android:text="@string/default_car_name"/>

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_weight="1"
        android:typeface="serif"
        android:textSize="16sp"
        android:text="@string/default_car_price"/>


</LinearLayout>